--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "etymosis",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2",
-    "zod": "^3.22.4"
+    "ajv": "^8.12.0",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "typescript": "^5.3.2"
